<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:paddingLeft="8dp"
	android:paddingRight="8dp">
    
	<!-- name_version defined within activity-->
	<!-- consists of strings: app_name + version -->
    <TextView
        android:id="@+id/name_version"
        style="@style/styleTitle" />
    
	<TextView android:text="@string/app_desc"
	    style="@style/styleText" />

    <View android:background="#736F6E"
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:gravity="center_vertical"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
         />
	
    <TextView
        android:drawableLeft="@drawable/ic_highwater"
        android:drawablePadding="10sp"
        android:text="@string/highwater_name"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        />
    
    <TextView 
        android:text="@string/highwater_website"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="20sp"
        android:autoLink="web"
         />
    <TextView 
        android:text="@string/highwater_source"
        android:gravity="fill_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="20sp"
        android:autoLink="web" />
</LinearLayout>